--- a/ops/deploy/roles/prometheus/files/prometheus.yml
+++ b/ops/deploy/roles/prometheus/files/prometheus.yml
@@ -27,3 +27,8 @@ scrape_configs:
 
     static_configs:
     - targets: ['localhost:9090']
+
+  - job_name: "node"
+    metrics_path: /metrics
+    static_configs:
+    - targets: ['localhost:9100']
