--- a/ops/deploy/roles/nginx/tasks/main.yml
+++ b/ops/deploy/roles/nginx/tasks/main.yml
@@ -1,7 +1,32 @@
 ---
-- name: Ensure that nginx is installed
-  yum:
-    pkg: nginx
+- name: create nginx system group
+  group:
+    name: nginx
+    system: true
     state: present
-  tags:
-    - configuration
+
+- name: create nginx system user
+  user:
+    name: nginx
+    system: true
+    shell: "/usr/sbin/nologin"
+    group: nginx
+    createhome: false
+    home: "{{ nginx_dir }}"
+
+- name: replace systemd service unit
+  template:
+    src: nginx.service.j2
+    dest: /usr/lib/systemd/system/nginx.service
+    owner: nginx
+    group: nginx
+    mode: 0644
+  notify:
+    - restart nginx
+
+- name: Allow nginx to bind to port in SELinux
+  seport:
+    ports: "8000"
+    proto: tcp
+    setype: http_port_t
+    state: present
