--- a/ops/deploy/roles/common/tasks/main.yml
+++ b/ops/deploy/roles/common/tasks/main.yml
@@ -1,14 +1,9 @@
 ---
 - name: Ensure that essential packages are installed
-  yum:
+  apt:
     pkg: "{{ item }}"
     state: present
   tags:
     - configuration
   loop:
-    - epel-release
     - git
-
-- name: Install lxml
-  pip: 
-    name: lxml
