--- a/ops/deploy/roles/prometheus/files/prometheus.yml
+++ b/ops/deploy/roles/prometheus/files/prometheus.yml
@@ -9,11 +9,11 @@ alerting:
   alertmanagers:
   - static_configs:
     - targets:
-      # - alertmanager:9093
+       - 192.168.56.103:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-  # - "first_rules.yml"
+   - "/etc/prometheus/rules/*.rules"
   # - "second_rules.yml"
 
 # A scrape configuration containing exactly one endpoint to scrape:
@@ -28,7 +28,31 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
 
-  - job_name: "node"
+  - job_name: "node_app"
     metrics_path: /metrics
     static_configs:
-    - targets: ['localhost:9100']
+    - targets: ['192.168.56.102:9100']
+
+  - job_name: "node_infra"
+    metrics_path: /metrics
+    static_configs:
+    - targets: ['192.168.56.103:9100']
+
+  - job_name: "nginx_exporter"
+    metrics_path: /metrics
+    static_configs:
+    - targets: ['192.168.56.102:9113']
+
+  - job_name: "nginx_log_exporter"
+    metrics_path: /metrics
+    static_configs:
+    - targets: ['192.168.56.102:4040']
+
+  - job_name: "otus_exporter"
+    metrics_path: /metrics
+    static_configs:
+    - targets: ['192.168.56.102:1234']
+
+  - job_name: "alertmanager"
+    static_configs:
+    - targets: ['192.168.56.103:9093']
