--- a/ops/deploy/roles/app/files/spring_app.conf
+++ b/ops/deploy/roles/app/files/spring_app.conf
@@ -1,7 +1,11 @@
 server {
-    listen 80;
+    listen 81;
 
     location / {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://localhost:80;
+    }
+
+    location = /basic_status {
+        stub_status;
     }
 }
