--- a/ops/deploy/roles/app/tasks/main.yml
+++ b/ops/deploy/roles/app/tasks/main.yml
@@ -1,35 +1,86 @@
 ---
-- name: Download artifact
-  maven_artifact:
-    group_id: com.example
-    artifact_id: spring-boot
-    repository_url: "{{nexus_address}}/repository/maven-snapshots"
-    username: "{{vault_nexus_username}}"
-    password: "{{vault_nexus_password}}"
-    dest: "{{host_app_destination}}/{{app_file_name}}"
-    version: "{{artifact_version}}"
-    mode: '666'
-    verify_checksum: change
+#Otus exporter section
+- name: Copy file with owner and permissions
+  ansible.builtin.copy:
+    src: /home/dmitrii/Projects/spring-boot-sample/ops/artifactory/otus-metrics.jar
+    dest: /home/irina/Documents/Irina/otus-exporter/otus-metrics.jar
+    owner: irina
+    group: irina
+    mode: '775'
 
-  tags:
-    - app_deploy
-
-- name: Add spring application service config
+- name: Add otus_exporter service config
   template:
-    src: "{{app_name}}.service.j2"
-    dest: "/etc/systemd/system/{{app_name}}.service"
+    src: "otus_exporter.service.j2"
+    dest: "/etc/systemd/system/otus_exporter.service"
   tags:
     - app_deploy
 
-#Might be still a bug in Ansible 2.9 on Ubuntu 20.4
-- name: Start application service
-  service:
-    enabled: true
-    name: "{{app_name}}"
-    state: reloaded
+#- name: Start otus_exporter service
+#  service:
+#    enabled: true
+#    name: "otus_exporter"
+#    state: reloaded
+#  tags:
+#    - app_deploy
+
+
+#Nginx log exporter section
+- name: Copy file with owner and permissions nginx_log_exporter
+  ansible.builtin.copy:
+    src: /home/dmitrii/Projects/spring-boot-sample/ops/artifactory/prometheus-nginxlog-exporter
+    dest: /home/irina/Documents/Irina/nginx-exporter/prometheus-nginxlog-exporter
+    owner: irina
+    group: irina
+    mode: '775'
+
+- name: Copy file with owner and permissions nginx_log_exporter
+  ansible.builtin.copy:
+    src: /home/dmitrii/Projects/spring-boot-sample/ops/artifactory/nginxlog_exporter.yml
+    dest: /home/irina/Documents/Irina/nginx-exporter/nginxlog_exporter.yml
+    owner: irina
+    group: irina
+    mode: '666'
+
+- name: Add nginx_log_exporter service config
+  template:
+    src: "nginx_log_exporter.service.j2"
+    dest: "/etc/systemd/system/nginx_log_exporter.service"
   tags:
     - app_deploy
 
+#- name: Start nginx_log_exporter service
+#  service:
+#    enabled: true
+#    name: "nginx_log_exporter"
+#    state: reloaded
+#  tags:
+#    - app_deploy
+
+#Nginx exporter section
+#- name: Copy file with owner and permissions
+#  ansible.builtin.copy:
+#    src: /home/dmitrii/Projects/spring-boot-sample/ops/artifactory/nginx-prometheus-exporter
+#    dest: /home/irina/Documents/Irina/nginx-exporter/nginx-prometheus-exporter
+#    owner: irina
+#    group: irina
+#    mode: '775'
+
+- name: Add nginx_exporter service config
+  template:
+    src: "nginx_exporter.service.j2"
+    dest: "/etc/systemd/system/nginx_exporter.service"
+  tags:
+    - app_deploy
+
+#- name: Start nginx_exporter service
+#  service:
+#    enabled: true
+#    name: "nginx_exporter"
+#    state: reloaded
+#  tags:
+#    - app_deploy
+
+#Application nginx setup
 - name: Add nginx app proxy configuration
   copy:
     src: "{{app_name}}.conf"
@@ -47,10 +98,12 @@
   tags:
     - app_deploy
 
-#Might be still a bug in Ansible 2.9 on Ubuntu 20.4
 - name: Reload nginx
   service:
     name: nginx
     state: reloaded
   tags:
     - app_deploy
+
+- name: Metricbeat plays
+  include: metricbeat.yml
