--- a/ops/deploy/deploy-app.yml
+++ b/ops/deploy/deploy-app.yml
@@ -1,9 +1,10 @@
 ---
 - name: deploy application
-  hosts: development
-  remote_user: root
-  vars_files:
-    - vault.yml
+  hosts: observable_host
+  remote_user: irina
+  become: yes
+#  vars_files:
+#    - vault.yml
   roles:
     - role: common
     - role: nginx
