--- a/ops/deploy/roles/prometheus/files/prometheus.yml
+++ b/ops/deploy/roles/prometheus/files/prometheus.yml
@@ -5,15 +5,15 @@ global:
   # scrape_timeout is set to the global default (10s).
 
 # Alertmanager configuration
-alerting:
-  alertmanagers:
-  - static_configs:
-    - targets:
-       - 192.168.56.103:9093
+#alerting:
+#  alertmanagers:
+#  - static_configs:
+#    - targets:
+#       - 192.168.56.103:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-rule_files:
-   - "/etc/prometheus/rules/*.rules"
+#rule_files:
+#   - "/etc/prometheus/rules/*.rules"
   # - "second_rules.yml"
 
 # A scrape configuration containing exactly one endpoint to scrape:
@@ -56,3 +56,8 @@ scrape_configs:
   - job_name: "alertmanager"
     static_configs:
     - targets: ['192.168.56.103:9093']
+
+  - job_name: "kafka"
+    metrics_path: /metrics
+    static_configs:
+      - targets: ['192.168.1.217:7071', '192.168.1.218:7071']
